[project]
name = "sprintboy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "click>=8.1.0",
    "cyksuid>=2.1.0",
    "discord>=2.3.2",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langchain-ollama>=1.0.1",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
    "thefuzz>=0.22.1",
    "torf>=4.3.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "cyksuid>=2.1.0",
    "ipython>=9.6.0",
    "polars>=1.34.0",
    "pyright>=1.1.407",
    "ruff>=0.14.2",
]

[project.scripts]
upload-album = "bot.upload_cli:upload_album"
seed-torrent = "bot.upload_cli:seed_torrent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]
